# affordance_primitives

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  package.xml
.github/workflows/: format.yaml
affordance_primitive_msgs/: CMakeLists.txt  package.xml
affordance_primitive_msgs/action/: AffordancePrimitive.action
affordance_primitive_msgs/msg/: APRobotParameter.msg  AffordanceParameter.msg  AffordanceTrajectory.msg  AffordanceWaypoint.msg  CartesianBool.msg  CartesianFloat.msg  ScrewStamped.msg
affordance_primitive_msgs/srv/: AffordancePrimitive.srv
affordance_primitives/: CMakeLists.txt  README.md  package.xml  plugins.xml
affordance_primitives/doc/html/: _c_make_lists_8txt.html  _c_o_n_t_r_i_b_u_t_i_n_g_8md.html  _r_e_a_d_m_e_8md.html  affordance__utils_8cpp.html  affordance__utils_8cpp__incl.map  affordance__utils_8cpp__incl.md5  affordance__utils_8cpp_source.html  affordance__utils_8hpp.html  affordance__utils_8hpp__dep__incl.map  affordance__utils_8hpp__dep__incl.md5  affordance__utils_8hpp__incl.map  affordance__utils_8hpp__incl.md5  affordance__utils_8hpp_source.html  annotated.html  ap__common_8hpp.html  ap__common_8hpp__dep__incl.map  ap__common_8hpp__dep__incl.md5  ap__common_8hpp__incl.map  ap__common_8hpp__incl.md5  ap__common_8hpp_source.html  ap__executor_8cpp.html  ap__executor_8cpp__incl.map  ap__executor_8cpp__incl.md5  ap__executor_8cpp_source.html  ap__executor_8hpp.html  ap__executor_8hpp__dep__incl.map  ap__executor_8hpp__dep__incl.md5  ap__executor_8hpp__incl.map  ap__executor_8hpp__incl.md5  ap__executor_8hpp_source.html  class_a_p_executor_test-members.html  class_a_p_executor_test.html  class_a_p_executor_test__coll__graph.map  class_a_p_executor_test__coll__graph.md5  class_a_p_executor_test__inherit__graph.map  class_a_p_executor_test__inherit__graph.md5  classaffordance__primitives_1_1_a_p_executor-members.html  classaffordance__primitives_1_1_a_p_executor.html  classaffordance__primitives_1_1_a_p_screw_executor-members.html  classaffordance__primitives_1_1_a_p_screw_executor.html  (+216 more)
affordance_primitives/doc/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_7.js  files_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+30 more)
affordance_primitives/include/affordance_primitives/: ap_common.hpp  empty_parameter_manager.hpp  kinematic_task_estimator.hpp  msg_types.hpp  screw_conversions.hpp  screw_execution.hpp  task_estimator.hpp
affordance_primitives/include/affordance_primitives/ap_executor/: ap_executor.hpp
affordance_primitives/include/affordance_primitives/configs_interface/: empty_parameter_manager.hpp  parameter_manager.hpp
affordance_primitives/include/affordance_primitives/screw_model/: affordance_utils.hpp  screw_axis.hpp  screw_execution.hpp
affordance_primitives/include/affordance_primitives/screw_planning/: chained_screws.hpp  screw_constraint.hpp  screw_planning.hpp  unchained_screws.hpp
affordance_primitives/include/affordance_primitives/task_estimator/: kinematic_task_estimator.hpp  task_estimator.hpp
affordance_primitives/include/affordance_primitives/task_monitor/: task_monitor.hpp
affordance_primitives/src/: affordance_utils.cpp  empty_parameter_manager.cpp  kinematic_task_estimator.cpp  parameter_manager_plugins.cpp  screw_execution.cpp
affordance_primitives/src/ap_executor/: ap_executor.cpp
affordance_primitives/src/configs_interface/: empty_parameter_manager.cpp
affordance_primitives/src/screw_model/: affordance_utils.cpp  screw_axis.cpp  screw_execution.cpp
affordance_primitives/src/screw_planning/: chained_screws.cpp  screw_constraint.cpp  screw_planning.cpp  screw_planning_multi.cpp  unchained_screws.cpp
affordance_primitives/src/task_estimator/: kinematic_task_estimator.cpp
affordance_primitives/src/task_monitor/: task_monitor.cpp
affordance_primitives/test/: test_affordance_utils.cpp  test_ap_executor.cpp  test_ap_executor.test  test_ap_planning.cpp  test_chained_constraints.cpp  test_parameter_manager.cpp  test_parameter_manager.test  test_screw_axis.cpp  test_screw_constraints.cpp  test_screw_execution.cpp  test_screw_planning.cpp  test_task_estimator.cpp  test_task_estimator.test  test_task_monitor.cpp  test_task_monitor.test
affordance_primitives/test/launch/: test_ap_executor.test.py  test_parameter_manager.test.py  test_screw_execution.test.py  test_task_estimator.test.py  test_task_monitor.test.py
ap_examples/: CMakeLists.txt  README.md  ap_example_plugins.xml  package.xml
ap_examples/include/ap_examples/: example_parameter_manager.hpp  example_task_estimator.hpp
ap_examples/src/: ap_client_node.cpp  ap_executor_node.cpp  example_parameter_manager.cpp  example_task_estimator.cpp
include/affordance_primitives/: affordance_utils.hpp  msg_types.hpp  screw_conversions.hpp  screw_execution.hpp  screw_motion.hpp
src/: affordance_utils.cpp  screw_axis.cpp  screw_execution.cpp  screw_motion.cpp
test/: test_affordance_utils.cpp  test_screw_axis.cpp  test_screw_execution.test
