<?xml version="1.0"?>
<package format="3">
  <name>affordance_primitives</name>
  <version>0.0.1</version>
  <description>Library for affordance motion primitives.</description>

  <maintainer email="adam.pettinger@utexas.edu">Adam Pettinger</maintainer>
  <author email="adam.pettinger@utexas.edu">Adam Pettinger</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>s

  <depend>geometry_msgs</depend>
  <depend>tf2_eigen</depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
