<?xml version="1.0"?>
<package format="2">
  <name>ap_examples</name>
  <version>0.0.0</version>
  <description>Gives examples for using the Affordance Primitive library</description>

  <maintainer email="adam.pettinger@utexas.edu">Adam Pettinger</maintainer>
  <author email="adam.pettinger@utexas.edu">Adam Pettinger</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib</depend>
  <depend>affordance_primitives</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
