<?xml version="1.0"?>
<package format="3">
  <name>ap_examples</name>
  <version>0.0.0</version>
  <description>Gives examples for using the Affordance Primitive library</description>

  <maintainer email="adam.pettinger@utexas.edu">Adam Pettinger</maintainer>
  <author email="adam.pettinger@utexas.edu">Adam Pettinger</author>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>affordance_primitives</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
